A few cosmetic changes & fixes
- Change number of cross-sell items on cart page to 2 items because 3 was
too much to fit in the given space.
- As a followup to above, I've removed the cross-sells on mobile view as it
displays above the cart totals area, forcing users to scroll past cross-sells
to view total cost... that is if they even think to scroll down. To some
people it looks like the page is broken
- Hid star ratings and original prices—on sale items—in the cross-sells area
- Fix problem with description in pinteres it share button
- Changed hamburger menu icon and interaction. Menu area now loads hidden on
smaller screens
- Changes sass config. Now compiles to main folder instead of subfolder. The
upshot is that style.css does not have to import from styles/screen.css
- Changed overall box-sizing to border-box.

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -27,6 +27,7 @@ body{margin:0;}
 	background:transparent url(img/60opacity.png);
 	margin:0 auto;
 	@include pie-clearfix;
+	@include trailer();
 }
 #loginbasketgroup{
 	height:30px;
@@ -35,18 +36,6 @@ body{margin:0;}
 		float:right;
 		margin-left: 20px;
 	}
-}
-#brandingsearch{
-	padding-top:32px;
-	width:100%;
-}
-#search-container{
-	width:100%;
-	@media screen and (min-width: 761px) {
-	    width:53%;
-	    float:right;
-	}
-
 }
 
 nav.shop-nav{
@@ -92,15 +81,11 @@ footer{
 
 }
 #footer{
-	background:$grayDark;
-	margin:0 auto;
+	margin:32px auto 0 auto;
 	padding:32px 16px 0 16px;
-	font-size:0.75em;
 	max-width:960px;
-	color:$grayLighter;
 	@include cf();
-	a{color:$grayLighter;}
-	ul{
+	ul:not(.children){
 		width:90%;
 		margin:auto;
 		margin-bottom:2em;
